# AiFERv0.7

./: README.md
AiFERv0.7/: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  setup.sh  smoke-test.sh  vite.config.js
AiFERv0.7/.github/workflows/: release.yml
AiFERv0.7/src/: App.jsx
AiFERv0.7/src-tauri/: Cargo.toml  tauri.conf.json
AiFERv0.7/src-tauri/src/: main.rs
AiFERv0.7/src/api/: aiferClient.js
AiFERv0.7/src/components/ui/: PopShell.jsx  neon-ui-pro.jsx  neon-ui.jsx  popos-primitives.jsx  popos-tokens.js
AiFERv0.7/src/pages/: AIFInspector.jsx  AifMarketplace.jsx  AppLauncher.jsx  Chat.jsx  Dashboard.jsx  FERCodeV2.jsx  Feed.jsx  FerretCalendar.jsx  FerretFiles.jsx  FerretFitness.jsx  FerretGallery.jsx  FerretMail.jsx  FerretMedia.jsx  FerretNotes.jsx  FerretTasks.jsx  FerretTerminal.jsx  FerretWeather.jsx  MLDashboard.jsx  MeshNetwork.jsx  OptimizationDashboard.jsx  PhysicsDashboard.jsx  PredictiveDashboard.jsx  Profile.jsx  ValidationDashboard.jsx  Wallet.jsx  index.jsx
AiFERv0.7/src/services/: adaptiveCompressionService.js  aiRouterService.js  aifCrypto.js  aifFilesystem.js  aifPackageManager.js  aiferPersonaService.js  benchmarkService.js  chaosTestingService.js  energyAwareScheduler.js  federatedAIService.js  federatedLearningService.js  ferMeshService.js  fercodeControllerService.js  indexedDBService.js  lstmPredictionService.js  meshDedupService.js  physicsEngine.js  predictivePrefetchService.js  privacyAuditService.js  semanticCacheService.js  walrusService.js  zkLoginService.js
